# ready_player_python

./: README.md  about_us.html  about_us.py  game.py  index.html  phaser_demo.html  phaser_demo.py  pyproject.toml  snake_logic.py  tile.html  tile.py
ready_player_python/: vue.py
resources/: prep1.md  prep2-3-4.md
