[tool.poetry]
name = "ready_player_python"
version = "0.1.0"
description = ""
authors = ["hunter britten <huntergbritten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
javascript = "^2015.32.59"
browser = "^0.0.1"
vue = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
